--- a/account/style.css
+++ b/account/style.css
@@ -29,6 +29,40 @@ header {
 	transition: 0.5s;
 }
 
+form {
+	padding: 0;	
+	margin: 0;
+	display: inline-block;
+}
+
+form input {
+	display: inline-block;
+}
+
+form i{
+	position: relative;
+	top: 0;
+	left: 0px;
+}
+
+.exit {
+	width: 90%;	
+}
+
+.h-link button {
+	text-align: center;
+	font-weight: bold;
+	border: none;
+	font-size: 22px;
+	color: #fff;
+	background-color: green;
+	display: inline-block;
+	width: 100%;
+	height: 100%;
+	padding-left: 20px;
+	padding-right: 30px;
+}
+
 .h-link a {
 	text-decoration: none;
 	width: 100%;
@@ -64,4 +98,41 @@ header {
 
 .h-link:hover {
 	border-bottom: 3px solid #fff;
+}
+
+.content {
+	width: 80%;
+	height: 800px;
+	margin: 50px 10%;	
+}
+
+.content-menu {
+	margin: 0;	
+	width: calc(100% / 6 - 20px);
+	height: 45px;
+	padding-top: 15px;	
+	border-radius: 	5px;
+	margin-left: 10px;
+	margin-top: 20px;	
+	display: inline-block;
+	background-color: #343D46;
+	color: #fff;
+	text-align: center;
+	font-weight: bold;
+	font-size: 	18px;
+}
+
+.content-menu a {
+	display: block;
+	text-decoration: none;
+	color: #fff;
+	width: 100%;	
+	height: 100%;	
+}
+
+.menu-div {
+	width: 70%;	
+	margin-left: 15%;	
+	padding-bottom: 20px;	
+	border-bottom: 1px solid #c0c0c0;
 }
