--- a/account/style.css
+++ b/account/style.css
@@ -1,6 +1,7 @@
 body {
 	margin: 0;
 	color: #fff;
+	position: relative;
 }
 
 header {
@@ -102,14 +103,14 @@ form i{
 
 .content {
 	width: 80%;
-	height: 800px;
+	height: auto;
 	margin: 50px 10%;
 }
 
 .content-menu {
 	margin: 0;	
 	width: calc(100% / 6 - 20px);
-	height: 45px;
+	height: 35px;
 	padding-top: 15px;	
 	border-radius: 	5px;
 	margin-left: 10px;
@@ -135,4 +136,158 @@ form i{
 	margin-left: 15%;	
 	padding-bottom: 20px;	
 	border-bottom: 1px solid #c0c0c0;
+}
+
+
+.chat {
+	display: none;
+	position: fixed;
+	width: 30%;	
+	height: 100%;
+	top: 0;
+	right: 0;	
+	background-color: #000;
+}
+
+.chat form {
+	background-color: #0c0c0c;
+	position: absolute;
+	display: inline-block;
+	bottom: 0;
+	right: 0;
+	width: 100%;
+	margin: 0;
+	padding: 0;
+	height: 40px;
+}
+
+.chat form input {
+	width: calc(100% - 60px);
+	display: inline-block;
+	height: 100%;
+	margin: 0;
+}
+
+.chat form button {
+	display: inline-block;
+	right: 0;
+	position: absolute;
+	width: 60px;
+	height: 40px;
+}
+
+.close {
+	text-decoration: none;
+	color: #000;
+	background-color: #fff;
+	padding: 4px;
+	position: relative;
+	font-size: 20px;
+	right: 10px;
+	top: 10px;
+	float: right;
+	font-weight: bold;
+}
+
+.chat-btn {
+	position: fixed;
+	right: 20px;
+	bottom: 50px;
+	width: auto;
+	height: 25px;
+	font-size: 	25px;
+	line-height: 25px;
+	border-radius: 	4px;
+	padding: 5px;
+	background-color: #fff;
+	color: #000;
+}
+
+.chat-btn a {
+	display: block;
+	width: 100%;
+	height: 100%;
+	text-decoration: none;
+	color: #000;
+}
+
+.b-status {
+	background-color: #fff;
+	width: 70%;
+	margin-left: 15%;
+	margin-top: 40px;
+	border-radius: 5px;
+	border: 1px solid #c0c0c0;
+	height: auto;
+	padding-bottom: 30px;
+}
+
+.balance-block i {
+	font-size: 48px;
+	color: #F69000;
+	line-height: 48px;
+	margin-right: 10px;
+}
+
+.balance-block {
+	color: #000;
+	width: 94%;
+	margin-left: 3%;
+	margin-top: 20px;
+	padding-bottom: 20px;
+	height: 100px;
+	border-bottom: 1px solid #c0c0c0;
+}
+
+.balance-block a {
+	display: inline-block;
+	text-decoration: none;
+	font-size: 24px;
+	margin-left: 15px;
+	color: blue;
+}
+
+.balance-block p {
+	color: #000;
+	float: right;
+	font-size: 20px;
+}
+
+.down {
+	width: 100%;
+	display: inline-block;
+}
+
+.down a {
+	display: inline-block;
+	padding: 5px 15px;
+	border: 1px solid #c0c0c0;
+	border-radius: 5px;
+	font-size: 18px;
+	text-align: center;
+	color: #000;
+	text-decoration: none;
+}
+
+.down a i {
+	display: inline-block;
+	line-height: 18px;
+	font-size: 18px;
+	color: #000;
+}
+
+.down .down-btc {
+	display: inline-block;
+	width: calc(100% - 70px);
+	padding: 5px 20px;
+	text-align: center;
+	text-decoration: none;
+	color: #6d6d6d;
+	border-radius: 5px;
+	background-color: #fff;
+	border: 1px solid #c0c0c0;
+}
+
+.down .down-btc:hover {
+	background-color: #E9E9D2;
 }
